<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_status_bar"
        android:fontFamily="@font/nunito_semi_bold"
        android:gravity="center"
        android:text="@string/event_app"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_info"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@id/app_bar"
        app:layout_constraintEnd_toEndOf="@id/app_bar"
        app:layout_constraintTop_toTopOf="@id/app_bar"
        app:tint="#ffff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="16dp"
                    android:src="@drawable/ic_battery" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_16dp"
                    android:text="@string/power"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/power_connect_disconnect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="16dp"
                    android:src="@drawable/ic_screen" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/screen"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/screen_on_off"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="16dp"
                    android:src="@drawable/ic_bluetooth" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/bluetooth"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/bluetooth_on_off"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="16dp"
                    android:src="@drawable/ic_wifi" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/wi_fi"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/btn_wifi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="16dp"
                    android:src="@drawable/ic_pilot" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/pilot"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btn_airplane"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="16dp"
                    android:src="@drawable/ic_internet" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/network"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"

                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/btn_internet"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_item"
                android:elevation="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="19dp"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/language"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/btn_hotspot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="12dp"
                    android:src="@drawable/ic_btn_off" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>